# Argus

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/argus/: artifacts.py  cli.py  config.py  db.py  decisions.py  followup.py  models.py  prompts.py  synthesis.py  tui.py
src/argus/backends/: adapters.py  discovery.py  selection.py  subprocess.py
src/argus/conflicts/: __init__.py  grouping.py  risk.py  schema.py
src/argus/executor/: run.py
src/argus/findings/: __init__.py  parser.py  schema.py
src/argus/modes/: __init__.py
tests/: conftest.py  test_backend_discovery.py  test_backend_selection.py  test_cli.py  test_cli_decisions.py  test_conflict_grouping.py  test_db_migrations.py  test_db_runs.py  test_db_steps.py  test_fake_e2e.py  test_findings_parser.py  test_followup_rounds.py  test_modes.py  test_recommendation_artifacts.py  test_risk_gate.py  test_run_reconstruction.py  test_subprocess_adapters.py  test_synthesis.py  test_version.py
tests/fixtures/agent_outputs/: fenced_review.md  invalid_review.txt  valid_review.json
tests/fixtures/fake_bins/: fake-agent  fake-delay-agent  fake-dynamodb-agent  fake-high-risk-agent  fake-nonzero-agent  fake-postgres-agent  fake-stderr-agent  fake-timeout-agent
tests/fixtures/recommendations/: conflict_recommendation.md
tests/integration_real/: test_claude_real.py  test_codex_real.py  test_opencode_real.py  utils.py
tests/tui/: test_action_bar.py  test_conflict_widget.py  test_decision_actions.py  test_keybindings.py  test_pipeline_widget.py  test_raw_review.py
