[project]
name = "argus"
version = "0.1.0"
description = "Local multi-agent technical deliberation tool."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.4",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.2",
    "typer>=0.12.3",
]

[project.scripts]
argus = "argus.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
