[project]
name = "argus-review"
version = "0.1.1"
description = "Local multi-agent technical deliberation tool."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "MingLuo" }]
keywords = ["agents", "cli", "code-review", "decision-support", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "jinja2>=3.1.4",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.2",
    "textual>=0.89.0",
    "typer>=0.12.3",
]

[project.scripts]
argus = "argus.cli:app"

[project.urls]
Homepage = "https://github.com/MingLu0/Argus"
Repository = "https://github.com/MingLu0/Argus"
Issues = "https://github.com/MingLu0/Argus/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "real_backend: opt-in tests that invoke installed agent backends and may incur model/API cost",
]
